Update backend URL after branch merge

--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
       "typedRoutes": true
     },
     "extra": {
-      "router": {}
+      "router": {},
+      "backendUrl": "https://6ytjugugmhrw5w5dguny2u79uz83r3tz.app.specular.dev"
     }
   },
   "scheme": "Intentional Dating"
