--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 
 {
-  "name": "intentional-dating",
-  "version": "1.0.0",
+  "name": "Intentional",
+  "version": "1.0.1",
   "main": "index.ts",
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
+    "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel --clear",
     "android": "EXPO_NO_TELEMETRY=1 expo start --android",
     "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
-    "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
-    "build:android": "expo prebuild -p android",
-    "lint": "eslint .",
-    "eas:init": "eas init",
-    "eas:build:dev": "eas build --profile development --platform all",
-    "eas:build:preview": "eas build --profile preview --platform all",
-    "eas:build:prod": "eas build --profile production --platform all",
-    "eas:build:ios": "eas build --profile production --platform ios",
-    "eas:build:android": "eas build --profile production --platform android",
-    "eas:submit:ios": "eas submit --platform ios --latest",
-    "eas:submit:android": "eas submit --platform android --latest",
-    "eas:update:dev": "eas update --branch development",
-    "eas:update:prod": "eas update --branch production"
+    "build:ios": "eas build --platform ios",
+    "build:android": "eas build --platform android",
+    "submit:ios": "eas submit --platform ios",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -31,12 +22,14 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@types/difflib": "^0.2.7",
     "better-auth": "^1.3.34",
     "difflib": "^0.2.4",
+    "eas": "^0.1.0",
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-constants": "~18.0.8",
