fix: Resolve deployment errors and inconsistencies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "intentional",
+  "name": "intentional-dating",
   "version": "1.0.1",
   "main": "expo-router/entry",
   "scripts": {
