--- a/app.json
+++ b/app.json
@@ -1,3 +1,4 @@
+
 {
   "expo": {
     "name": "Intentional",
@@ -18,9 +19,10 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSPhotoLibraryUsageDescription": "We need access to your photo library to upload profile photos",
-        "NSCameraUsageDescription": "We need access to your camera to take profile photos"
+        "NSCameraUsageDescription": "We need access to your camera to take profile photos",
+        "NSLocationWhenInUseUsageDescription": "We need your location to show you matches nearby"
       },
-      "buildNumber": "1.0.1"
+      "buildNumber": "1.0.2"
     },
     "android": {
       "adaptiveIcon": {
@@ -32,8 +34,11 @@
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
-      ]
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION"
+      ],
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/images/96e0c1f0-fcef-4b76-b942-74280a3296cb.png",
@@ -42,7 +47,12 @@
     "plugins": [
       "expo-font",
       "expo-router",
-      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Intentional to use your location to show you matches nearby."
+        }
+      ],
       "expo-image-picker",
       "expo-secure-store"
     ],
@@ -51,7 +61,9 @@
       "typedRoutes": true
     },
     "extra": {
-      "router": {},
+      "router": {
+        "origin": false
+      },
       "eas": {
         "projectId": "your-project-id"
       },
