--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "intentional-dating",
   "version": "1.0.1",
@@ -15,6 +14,7 @@
     "@better-auth/expo": "^1.1.4",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.0.12",
     "better-auth": "^1.1.4",
     "expo": "~54.0.0",
