--- a/package.json
+++ b/package.json
@@ -1,61 +1,76 @@
 {
   "name": "intentional-dating",
-  "version": "1.0.1",
-  "main": "expo-router/entry",
+  "version": "1.0.0",
+  "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "eslint .",
-    "test": "jest"
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "android": "EXPO_NO_TELEMETRY=1 expo start --android",
+    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
+    "web": "EXPO_NO_TELEMETRY=1 expo start --web",
+    "build:ios": "eas build --platform ios --profile production",
+    "build:android": "eas build --platform android --profile production",
+    "build:preview": "eas build --platform all --profile preview",
+    "submit:ios": "eas submit --platform ios",
+    "submit:android": "eas submit --platform android",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@better-auth/expo": "^1.1.4",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.11.4",
-    "@react-navigation/native": "^7.0.12",
-    "better-auth": "^1.1.4",
-    "expo": "~54.0.0",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.1",
-    "expo-image-picker": "~16.0.4",
-    "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "~7.0.4",
-    "expo-location": "~18.0.4",
-    "expo-network": "~7.0.0",
-    "expo-router": "~5.0.5",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-edge-to-edge": "^0.2.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.4",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/runtime": "^7.26.9",
+    "@bacons/apple-targets": "^3.0.2",
+    "@better-auth/expo": "^1.3.34",
+    "@expo/metro-runtime": "~6.1.1",
+    "@expo/ngrok": "^4.1.3",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "better-auth": "^1.3.34",
+    "expo": "~54.0.1",
+    "expo-apple-authentication": "^8.0.8",
+    "expo-blur": "^15.0.6",
+    "expo-constants": "~18.0.8",
+    "expo-font": "^14.0.7",
+    "expo-haptics": "^15.0.6",
+    "expo-image-picker": "^17.0.7",
+    "expo-linear-gradient": "^15.0.6",
+    "expo-linking": "^8.0.7",
+    "expo-location": "^18.0.7",
+    "expo-network": "^8.0.7",
+    "expo-router": "^6.0.0",
+    "expo-secure-store": "^15.0.7",
+    "expo-splash-screen": "^31.0.8",
+    "expo-status-bar": "~3.0.7",
+    "expo-system-ui": "^6.0.7",
+    "expo-web-browser": "^15.0.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-edge-to-edge": "^1.7.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.21.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "eslint": "^8.57.1",
-    "eslint-config-expo": "^7.1.2",
+    "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.19.0",
+    "@types/react": "~19.1.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~10.0.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "jest": "^29.7.0",
-    "jest-expo": "~52.0.4",
-    "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "typescript": "^5.9.3"
+  },
+  "resolutions": {
+    "@expo/prebuild-config": "latest"
   },
   "private": true
 }
