--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 
 {
   "expo": {
-    "name": "Intentional Dating",
-    "slug": "intentional-dating",
+    "name": "Natively",
+    "slug": "Natively",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/natively-dark.png",
@@ -14,14 +14,10 @@
       "backgroundColor": "#000000"
     },
     "ios": {
-      "supportsTablet": false,
-      "bundleIdentifier": "com.intentional.dating",
-      "buildNumber": "1",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.Natively",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false,
-        "NSCameraUsageDescription": "We need access to your camera to take profile photos and videos.",
-        "NSPhotoLibraryUsageDescription": "We need access to your photo library to select profile photos and videos.",
-        "NSLocationWhenInUseUsageDescription": "We use your location to show you matches nearby."
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
@@ -30,15 +26,7 @@
         "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.intentional.dating",
-      "versionCode": 1,
-      "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
-        "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
-      ]
+      "package": "com.anonymous.Natively"
     },
     "web": {
       "favicon": "./assets/images/final_quest_240x240.png",
@@ -47,33 +35,15 @@
     "plugins": [
       "expo-font",
       "expo-router",
-      "expo-web-browser",
-      "expo-secure-store",
-      [
-        "expo-image-picker",
-        {
-          "photosPermission": "Allow access to select profile photos",
-          "cameraPermission": "Allow access to take profile photos"
-        }
-      ],
-      [
-        "expo-location",
-        {
-          "locationWhenInUsePermission": "Allow access to show nearby matches"
-        }
-      ]
+      "expo-web-browser"
     ],
-    "scheme": "intentional-dating",
+    "scheme": "natively",
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "your-project-id"
-      }
+      "router": {},
+      "backendUrl": "https://6ytjugugmhrw5w5dguny2u79uz83r3tz.app.specular.dev"
     }
   }
 }
