--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
@@ -16,7 +15,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "workbox-config.js"
+    "workbox-config.js",
   ],
   "exclude": [
     "node_modules"
